example/user-guides/alerting/alertmanager-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-example
spec:
  ports:
  - name: web
    port: 9093
    protocol: TCP
    targetPort: web
  selector:
    alertmanager: example
